java 11 compatibility - deploy on inria maven packages